components/dify/controllers.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: dify
    app.kubernetes.io/part-of: components
  name: dify-api
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: api
      app.kubernetes.io/name: dify
      app.kubernetes.io/part-of: components
  template:
    metadata:
      labels:
        app.kubernetes.io/component: api
        app.kubernetes.io/name: dify
        app.kubernetes.io/part-of: components
    spec:
      automountServiceAccountToken: false
      containers:
      - name: dify-api
        image: dify/api:latest
        ports:
        - name: http
          containerPort: 5001
        resources:
          limits:
            cpu: 2000m
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 256Mi
      enableServiceLinks: false
      serviceAccountName: default
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: plugin-daemon
    app.kubernetes.io/name: dify
    app.kubernetes.io/part-of: components
  name: dify-plugin-daemon
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: plugin-daemon
      app.kubernetes.io/name: dify
      app.kubernetes.io/part-of: components
  template:
    metadata:
      labels:
        app.kubernetes.io/component: plugin-daemon
        app.kubernetes.io/name: dify
        app.kubernetes.io/part-of: components
    spec:
      automountServiceAccountToken: false
      containers:
      - name: dify-plugin-daemon
        image: dify/plugin-daemon:latest
        ports:
        - name: http
          containerPort: 5002
        - name: remote-plugins
          containerPort: 5003
        resources:
          limits:
            cpu: 4000m
            memory: 4Gi
          requests:
            cpu: 1000m
            memory: 2Gi
        volumeMounts:
        - name: data
          mountPath: /app/storage
      enableServiceLinks: false
      serviceAccountName: default
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: dify-plugin-daemon
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: sandbox
    app.kubernetes.io/name: dify
    app.kubernetes.io/part-of: components
  name: dify-sandbox
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: sandbox
      app.kubernetes.io/name: dify
      app.kubernetes.io/part-of: components
  template:
    metadata:
      labels:
        app.kubernetes.io/component: sandbox
        app.kubernetes.io/name: dify
        app.kubernetes.io/part-of: components
    spec:
      automountServiceAccountToken: false
      containers:
      - name: dify-sandbox
        image: dify/sandbox:latest
        ports:
        - name: http
          containerPort: 8194
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: 1000m
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - name: conf
          mountPath: /dependencies/python-requirements.txt
          subPath: python-requirements.txt
          readOnly: true
      enableServiceLinks: false
      serviceAccountName: default
      volumes:
      - name: conf
        configMap:
          name: dify-sandbox
          items:
          - key: python-requirements.txt
            path: python-requirements.txt
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: scheduler
    app.kubernetes.io/name: dify
    app.kubernetes.io/part-of: components
  name: dify-scheduler
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: scheduler
      app.kubernetes.io/name: dify
      app.kubernetes.io/part-of: components
  template:
    metadata:
      labels:
        app.kubernetes.io/component: scheduler
        app.kubernetes.io/name: dify
        app.kubernetes.io/part-of: components
    spec:
      automountServiceAccountToken: false
      containers:
      - name: dify-scheduler
        image: dify/scheduler:latest
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
      enableServiceLinks: false
      serviceAccountName: default
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: ssrf-proxy
    app.kubernetes.io/name: dify
    app.kubernetes.io/part-of: components
  name: dify-ssrf-proxy
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: ssrf-proxy
      app.kubernetes.io/name: dify
      app.kubernetes.io/part-of: components
  template:
    metadata:
      labels:
        app.kubernetes.io/component: ssrf-proxy
        app.kubernetes.io/name: dify
        app.kubernetes.io/part-of: components
    spec:
      automountServiceAccountToken: false
      containers:
      - name: dify-ssrf-proxy
        image: dify/ssrf-proxy:latest
        command:
        - sh
        - -c
        - |
          cp /docker-entrypoint-mount.sh /docker-entrypoint.sh && \
          chmod +x /docker-entrypoint.sh && \
          /docker-entrypoint.sh
        ports:
        - name: proxy
          containerPort: 3128
        - name: reverse-proxy
          containerPort: 8194
        resources:
          limits:
            cpu: 300m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - name: conf
          mountPath: /docker-entrypoint-mount.sh
          subPath: docker-entrypoint.sh
          readOnly: true
        - name: conf
          mountPath: /etc/squid/conf.d/default.conf
          subPath: squid.conf
          readOnly: true
        - name: conf
          mountPath: /etc/squid/squid.conf.template
          subPath: squid.conf.template
          readOnly: true
      enableServiceLinks: false
      serviceAccountName: default
      volumes:
      - name: conf
        configMap:
          name: dify-ssrf-proxy
          items:
          - key: docker-entrypoint.sh
            path: docker-entrypoint.sh
          - key: squid.conf
            path: squid.conf
          - key: squid.conf.template
            path: squid.conf.template
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: web
    app.kubernetes.io/name: dify
    app.kubernetes.io/part-of: components
  name: dify-web
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: web
      app.kubernetes.io/name: dify
      app.kubernetes.io/part-of: components
  template:
    metadata:
      labels:
        app.kubernetes.io/component: web
        app.kubernetes.io/name: dify
        app.kubernetes.io/part-of: components
    spec:
      automountServiceAccountToken: false
      containers:
      - name: dify-web
        image: dify/web:latest
        ports:
        - name: http
          containerPort: 3000
        resources:
          limits:
            cpu: 1000m
            memory: 512Mi
          requests:
            cpu: 300m
            memory: 128Mi
      enableServiceLinks: false
      serviceAccountName: default
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: worker
    app.kubernetes.io/name: dify
    app.kubernetes.io/part-of: components
  name: dify-worker
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: worker
      app.kubernetes.io/name: dify
      app.kubernetes.io/part-of: components
  template:
    metadata:
      labels:
        app.kubernetes.io/component: worker
        app.kubernetes.io/name: dify
        app.kubernetes.io/part-of: components
    spec:
      automountServiceAccountToken: false
      containers:
      - name: dify-worker
        image: dify/worker:latest
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
      enableServiceLinks: false
      serviceAccountName: default
